--- a/frontend-nginx.conf
+++ b/frontend-nginx.conf
@@ -4,12 +4,33 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Logging
+    access_log /var/log/nginx/frontend_access.log combined buffer=512k flush=1m;
+    error_log /var/log/nginx/frontend_error.log warn;
+
+    # Gzip compression
+    gzip on;
+    gzip_comp_level 5;
+    gzip_min_length 256;
+    gzip_proxied any;
+    gzip_vary on;
+    gzip_types
+        application/javascript
+        application/json
+        application/xml
+        application/xml+rss
+        text/css
+        text/javascript
+        text/plain
+        text/xml;
+
     # Security headers
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
     add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'; connect-src 'self'" always;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
     # Deny access to dotfiles
     location ~ /\. {
