--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,14 @@ server {
     listen 80;
     server_name localhost;
 
+    # Logging
+    access_log /var/log/nginx/access.log combined buffer=512k flush=1m;
+    error_log /var/log/nginx/error.log warn;
+
+    # Rate limiting
+    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=static_limit:10m rate=100r/s;
+
     # Gzip compression
     gzip on;
     gzip_comp_level 5;
@@ -40,6 +48,7 @@ server {
 
     # Proxy API requests to backend
     location /api/ {
+        limit_req zone=api_limit burst=20 nodelay;
         proxy_pass http://backend:5000/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
@@ -60,6 +69,7 @@ server {
 
     # Proxy everything else to frontend
     location / {
+        limit_req zone=static_limit burst=100 nodelay;
         proxy_pass http://frontend:3000;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
