--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,27 @@
-# Backend environment variables
+# Application
 NODE_ENV=production
 PORT=5000
 
-# Add your application-specific variables below
+# Backend Configuration
+BACKEND_URL=http://localhost:5000
+FRONTEND_URL=http://localhost:3000
+
+# API Keys and Secrets (replace with your actual values)
+JWT_SECRET=your_jwt_secret_here
+API_KEY=your_api_key_here
+
+# Database (if needed)
 # DATABASE_URL=postgres://user:password@host:port/dbname
-# JWT_SECRET=your_jwt_secret
-# API_KEY=your_api_key 
+
+# External Services (if needed)
+# AWS_ACCESS_KEY_ID=your_aws_access_key
+# AWS_SECRET_ACCESS_KEY=your_aws_secret_key
+# AWS_REGION=your_aws_region
+
+# Email (if needed)
+# SMTP_HOST=smtp.example.com
+# SMTP_PORT=587
+# SMTP_USER=your_smtp_user
+# SMTP_PASS=your_smtp_password
+
+# Add any other environment variables your application needs 
