--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,19 +3,31 @@ version: '3.8'
 services:
   backend:
     build:
-      context: /home/ubuntu/apps/video-summary/backend
-      dockerfile: ${PWD}/backend.Dockerfile
+      context: ./backend
+      dockerfile: Dockerfile
     container_name: video-summary-backend
     restart: unless-stopped
-    env_file: 
-      - .env
-    expose:
-      - 5000
-    networks:
-      - app_network
-    user: node
+    env_file: ./backend/.env
+    volumes:
+      - ./backend:/app
+      - /app/node_modules
+    ports:
+      - "5050:5050"
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 1G
+        reservations:
+          cpus: '0.5'
+          memory: 512M
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:5050/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -23,17 +35,29 @@ services:
 
   frontend:
     build:
-      context: /home/ubuntu/apps/video-summary/frontend
-      dockerfile: ${PWD}/frontend.Dockerfile
+      context: ./frontend
+      dockerfile: Dockerfile
     container_name: video-summary-frontend
     restart: unless-stopped
-    expose:
-      - 3000
-    networks:
-      - app_network
-    depends_on:
-      backend:
-        condition: service_healthy
+    env_file: ./frontend/.env
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    ports:
+      - "3000:3000"
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 512M
+        reservations:
+          cpus: '0.25'
+          memory: 256M
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3000"]
       interval: 30s
@@ -42,20 +66,32 @@ services:
       start_period: 40s
 
   nginx:
-    image: nginx:1.25-alpine
+    image: nginx:alpine
     container_name: video-summary-nginx
     restart: unless-stopped
     ports:
       - "80:80"
+      - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
     depends_on:
-      backend:
-        condition: service_healthy
-      frontend:
-        condition: service_healthy
-    networks:
-      - app_network
+      - backend
+      - frontend
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 256M
+        reservations:
+          cpus: '0.25'
+          memory: 128M
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
     healthcheck:
       test: ["CMD", "nginx", "-t"]
       interval: 30s
@@ -64,5 +100,5 @@ services:
       start_period: 40s
 
 networks:
-  app_network:
+  default:
     driver: bridge 
