--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,13 @@ version: '3.8'
 services:
   backend:
     build:
-      context: ./backend
+      context: /home/ubuntu/apps/video-summary/backend
       dockerfile: Dockerfile
     container_name: video-summary-backend
     restart: unless-stopped
-    env_file: ./backend/.env
+    env_file: /home/ubuntu/apps/video-summary/backend/.env
     volumes:
-      - ./backend:/app
+      - /home/ubuntu/apps/video-summary/backend:/app
       - /app/node_modules
     ports:
       - "5050:5050"
@@ -35,13 +35,13 @@ services:
 
   frontend:
     build:
-      context: ./frontend
+      context: /home/ubuntu/apps/video-summary/frontend
       dockerfile: Dockerfile
     container_name: video-summary-frontend
     restart: unless-stopped
-    env_file: ./frontend/.env
+    env_file: /home/ubuntu/apps/video-summary/frontend/.env
     volumes:
-      - ./frontend:/app
+      - /home/ubuntu/apps/video-summary/frontend:/app
       - /app/node_modules
     ports:
       - "3000:3000"
@@ -51,7 +51,7 @@ services:
           cpus: '0.5'
           memory: 512M
         reservations:
-          cpus: '0.25'
+          cpus: '0.2'
           memory: 256M
     logging:
       driver: "json-file"
@@ -73,19 +73,16 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
-    depends_on:
-      - backend
-      - frontend
+      - /home/ubuntu/apps/video-summary/nginx.conf:/etc/nginx/nginx.conf:ro
+      - /home/ubuntu/apps/video-summary/certbot/conf:/etc/letsencrypt
+      - /home/ubuntu/apps/video-summary/certbot/www:/var/www/certbot
     deploy:
       resources:
         limits:
           cpus: '0.5'
           memory: 256M
         reservations:
-          cpus: '0.25'
+          cpus: '0.2'
           memory: 128M
     logging:
       driver: "json-file"
@@ -98,6 +95,9 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
+    depends_on:
+      - backend
+      - frontend
 
 networks:
   default:
