--- a/.github/workflows/deploy-config.yml
+++ b/.github/workflows/deploy-config.yml
@@ -23,6 +23,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Setup WireGuard VPN
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y wireguard
+          echo "${{ secrets.VPN_CONFIG }}" > /etc/wireguard/wg0.conf
+          sudo wg-quick up wg0
+          sleep 5  # Wait for VPN to establish
+
       - name: Deploy to server
         uses: appleboy/ssh-action@master
         with:
@@ -42,4 +50,8 @@ jobs:
             docker compose -f docker-compose.yml up -d
             
             # Verify services are running
-            docker compose -f docker-compose.yml ps 
+            docker compose -f docker-compose.yml ps
+
+      - name: Cleanup VPN
+        if: always()
+        run: sudo wg-quick down wg0 
