--- a/nginx.conf
+++ b/nginx.conf
@@ -36,6 +36,11 @@ http {
     limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
     limit_req_zone $binary_remote_addr zone=static_limit:10m rate=100r/s;
 
+    # Error pages
+    error_page 429 /429.html;
+    error_page 404 /404.html;
+    error_page 500 502 503 504 /50x.html;
+
     # Virtual Host Configs
     server {
         listen 80;
@@ -56,6 +61,28 @@ http {
             return 200 'healthy\n';
         }
 
+        # Error pages
+        location = /429.html {
+            internal;
+            root /usr/share/nginx/html;
+            add_header Content-Type text/html;
+            return 429 '<!DOCTYPE html><html><head><title>429 Too Many Requests</title></head><body><h1>429 Too Many Requests</h1><p>Please try again later.</p></body></html>';
+        }
+
+        location = /404.html {
+            internal;
+            root /usr/share/nginx/html;
+            add_header Content-Type text/html;
+            return 404 '<!DOCTYPE html><html><head><title>404 Not Found</title></head><body><h1>404 Not Found</h1><p>The requested resource was not found.</p></body></html>';
+        }
+
+        location = /50x.html {
+            internal;
+            root /usr/share/nginx/html;
+            add_header Content-Type text/html;
+            return 500 '<!DOCTYPE html><html><head><title>500 Internal Server Error</title></head><body><h1>500 Internal Server Error</h1><p>An error occurred while processing your request.</p></body></html>';
+        }
+
         # Video Summary Application
         location / {
             proxy_pass http://frontend:3000;
@@ -70,6 +97,7 @@ http {
 
             # Rate limiting for static content
             limit_req zone=static_limit burst=100 nodelay;
+            limit_req_status 429;
         }
 
         location /api {
@@ -85,6 +113,7 @@ http {
 
             # Rate limiting for API
             limit_req zone=api_limit burst=10 nodelay;
+            limit_req_status 429;
         }
 
         # Example of another application
@@ -99,12 +128,5 @@ http {
         #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         #     proxy_set_header X-Forwarded-Proto $scheme;
         # }
-
-        # Error pages
-        error_page 404 /404.html;
-        error_page 500 502 503 504 /50x.html;
-        location = /50x.html {
-            root /usr/share/nginx/html;
-        }
     }
 } 
