--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,23 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     env_file: ./backend/.env
+    environment:
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - OPENAI_MODEL=${OPENAI_MODEL}
+      - YOUTUBE_API_KEY=${YOUTUBE_API_KEY}
+      - AZURE_STORAGE_AUTH_TYPE=${AZURE_STORAGE_AUTH_TYPE}
+      - AZURE_STORAGE_ACCOUNT_NAME=${AZURE_STORAGE_ACCOUNT_NAME}
+      - AZURE_STORAGE_CONNECTION_STRING=${AZURE_STORAGE_CONNECTION_STRING}
+      - AZURE_STORAGE_CONTAINER_NAME=${AZURE_STORAGE_CONTAINER_NAME}
+      - AZURE_STORAGE_ACCOUNT_KEY=${AZURE_STORAGE_ACCOUNT_KEY}
+      - AZURE_TENANT_ID=${AZURE_TENANT_ID}
+      - AZURE_CLIENT_ID=${AZURE_CLIENT_ID}
+      - AZURE_CLIENT_SECRET=${AZURE_CLIENT_SECRET}
+      - MAX_FILE_SIZE=${MAX_FILE_SIZE}
+      - MAX_LOCAL_FILESIZE=${MAX_LOCAL_FILESIZE}
+      - MAX_LOCAL_FILESIZE_MB=${MAX_LOCAL_FILESIZE_MB}
+      - RATE_LIMIT_WINDOW_MS=${RATE_LIMIT_WINDOW_MS}
+      - RATE_LIMIT_MAX_REQUESTS=${RATE_LIMIT_MAX_REQUESTS}
     ports:
       - "5050:5050"
     volumes:
@@ -37,6 +54,13 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     env_file: ./frontend/.env
+    environment:
+      - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
+      - NEXT_PUBLIC_AZURE_STORAGE_ACCOUNT_NAME=${NEXT_PUBLIC_AZURE_STORAGE_ACCOUNT_NAME}
+      - NEXT_PUBLIC_AZURE_STORAGE_CONTAINER_NAME=${NEXT_PUBLIC_AZURE_STORAGE_CONTAINER_NAME}
+      - NEXT_PUBLIC_AZURE_STORAGE_SAS_TOKEN=${NEXT_PUBLIC_AZURE_STORAGE_SAS_TOKEN}
+      - NEXT_PUBLIC_MAX_FILE_SIZE=${NEXT_PUBLIC_MAX_FILE_SIZE}
+      - NEXT_PUBLIC_MAX_LOCAL_FILESIZE=${NEXT_PUBLIC_MAX_LOCAL_FILESIZE}
     ports:
       - "3000:3000"
     volumes:
