--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -41,18 +41,17 @@ http {
     error_page 404 /404.html;
     error_page 500 502 503 504 /50x.html;
 
-    # Virtual Host Configs
+    # HTTP Server (for local development/testing)
     server {
         listen 80;
-        server_name localhost;
+        server_name localhost *.local;
 
-        # Security headers
+        # Security headers (relaxed for development)
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-XSS-Protection "1; mode=block" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
-        add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline' 'unsafe-eval'" always;
 
         # Health check endpoint
         location /health {
@@ -64,42 +63,23 @@ http {
         # Error pages
         location = /429.html {
             internal;
-            root /usr/share/nginx/html;
             add_header Content-Type text/html;
             return 429 '<!DOCTYPE html><html><head><title>429 Too Many Requests</title></head><body><h1>429 Too Many Requests</h1><p>Please try again later.</p></body></html>';
         }
 
         location = /404.html {
             internal;
-            root /usr/share/nginx/html;
             add_header Content-Type text/html;
             return 404 '<!DOCTYPE html><html><head><title>404 Not Found</title></head><body><h1>404 Not Found</h1><p>The requested resource was not found.</p></body></html>';
         }
 
         location = /50x.html {
             internal;
-            root /usr/share/nginx/html;
             add_header Content-Type text/html;
             return 500 '<!DOCTYPE html><html><head><title>500 Internal Server Error</title></head><body><h1>500 Internal Server Error</h1><p>An error occurred while processing your request.</p></body></html>';
         }
 
-        # Video Summary Application
-        location / {
-            proxy_pass http://frontend:3000;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-
-            # Rate limiting for static content
-            limit_req zone=static_limit burst=100 nodelay;
-            limit_req_status 429;
-        }
-
+        # Backend API
         location /api {
             proxy_pass http://backend:5050;
             proxy_http_version 1.1;
@@ -111,14 +91,14 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
 
-            # Rate limiting for API
-            limit_req zone=api_limit burst=10 nodelay;
+            # Rate limiting for API (relaxed for development)
+            limit_req zone=api_limit burst=20 nodelay;
             limit_req_status 429;
         }
 
-        # Example of another application
-        # location /another-app {
-        #     proxy_pass http://another-app-service:8080;
+        # Frontend (commented out since frontend service is disabled)
+        # location / {
+        #     proxy_pass http://frontend:3000;
         #     proxy_http_version 1.1;
         #     proxy_set_header Upgrade $http_upgrade;
         #     proxy_set_header Connection 'upgrade';
@@ -127,6 +107,71 @@ http {
         #     proxy_set_header X-Real-IP $remote_addr;
         #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         #     proxy_set_header X-Forwarded-Proto $scheme;
+        # 
+        #     # Rate limiting for static content
+        #     limit_req zone=static_limit burst=100 nodelay;
+        #     limit_req_status 429;
         # }
+
+        # API Documentation and Testing Interface
+        location / {
+            add_header Content-Type text/html;
+            return 200 '
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Video Summary API - Development</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 40px; }
+        .endpoint { background: #f5f5f5; padding: 15px; margin: 10px 0; border-radius: 5px; }
+        .method { color: #007bff; font-weight: bold; }
+        .url { color: #28a745; font-family: monospace; }
+        .status { color: #28a745; font-weight: bold; }
+    </style>
+</head>
+<body>
+    <h1>🎬 Video Summary API</h1>
+    <p><span class="status">✅ Backend is running!</span></p>
+    
+    <h2>Available Endpoints:</h2>
+    
+    <div class="endpoint">
+        <div><span class="method">GET</span> <span class="url">/health</span></div>
+        <div>Health check endpoint</div>
+    </div>
+    
+    <div class="endpoint">
+        <div><span class="method">GET</span> <span class="url">/api/health</span></div>
+        <div>Backend health check</div>
+    </div>
+    
+    <div class="endpoint">
+        <div><span class="method">POST</span> <span class="url">/api/summary/youtube/streaming/summary</span></div>
+        <div>YouTube video summarization (streaming)</div>
+        <div>Query parameter: <code>url=https://youtube.com/watch?v=...</code></div>
+    </div>
+    
+    <h2>Test Commands:</h2>
+    <pre>
+# Health check
+curl http://localhost/health
+
+# Backend health check  
+curl http://localhost/api/health
+
+# Test YouTube summary (replace with actual YouTube URL)
+curl "http://localhost/api/summary/youtube/streaming/summary?url=https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+    </pre>
+    
+    <h2>Development Info:</h2>
+    <ul>
+        <li>Environment: Development/Testing</li>
+        <li>Nginx: ✅ Running</li>
+        <li>Backend: ✅ Running on port 5050</li>
+        <li>Frontend: ⏸️ Disabled for testing</li>
+    </ul>
+</body>
+</html>';
+        }
     }
 } 
