Enhance setup-vm.sh with comprehensive configuration management for environment variables, including required and optional prompts. Introduce structured sections for backend and frontend environment variables, and improve timeout settings in nginx.dev.conf for better handling of API requests and streaming. Update HTML response for clarity in development status.

--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -16,6 +16,12 @@ http {
     types_hash_max_size 2048;
     server_tokens off;
 
+    # Timeout Settings
+    proxy_connect_timeout 300s;
+    proxy_send_timeout 300s;
+    proxy_read_timeout 300s;
+    send_timeout 300s;
+
     # MIME Types
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
@@ -94,6 +100,41 @@ http {
             # Rate limiting for API (relaxed for development)
             limit_req zone=api_limit burst=20 nodelay;
             limit_req_status 429;
+
+            # Timeouts for video processing
+            proxy_connect_timeout 300s;
+            proxy_send_timeout 300s;
+            proxy_read_timeout 300s;
+            send_timeout 300s;
+        }
+
+        # Specific configuration for streaming endpoints
+        location /api/summary/youtube/streaming {
+            proxy_pass http://backend:5050;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Longer timeouts for streaming
+            proxy_connect_timeout 600s;
+            proxy_send_timeout 600s;
+            proxy_read_timeout 600s;
+            send_timeout 600s;
+
+            # Buffer settings for streaming
+            proxy_buffering off;
+            proxy_buffer_size 128k;
+            proxy_buffers 4 256k;
+            proxy_busy_buffers_size 256k;
+
+            # Rate limiting (relaxed for development)
+            limit_req zone=api_limit burst=20 nodelay;
+            limit_req_status 429;
         }
 
         # Frontend (commented out since frontend service is disabled)
@@ -120,6 +161,7 @@ http {
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>Video Summary API - Development</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 40px; }
@@ -130,8 +172,8 @@ http {
     </style>
 </head>
 <body>
-    <h1>🎬 Video Summary API</h1>
-    <p><span class="status">✅ Backend is running!</span></p>
+    <h1>Video Summary API</h1>
+    <p><span class="status">Backend is running!</span></p>
     
     <h2>Available Endpoints:</h2>
     
@@ -166,9 +208,9 @@ curl "http://localhost/api/summary/youtube/streaming/summary?url=https://www.you
     <h2>Development Info:</h2>
     <ul>
         <li>Environment: Development/Testing</li>
-        <li>Nginx: ✅ Running</li>
-        <li>Backend: ✅ Running on port 5050</li>
-        <li>Frontend: ⏸️ Disabled for testing</li>
+        <li>Nginx: Running</li>
+        <li>Backend: Running on port 5050</li>
+        <li>Frontend: Disabled for testing</li>
     </ul>
 </body>
 </html>';
